# libminidump

./: .gitignore  Makefile  Makefile.am  TODO  autogen.sh  configure.ac  coredump-util.c  coredump-util.h  coredump.c  coredump.h  format.h  generate.c  minidump.c  minidump.h  mkminidump.c  read-coredump.c  read-coredump.h  read-minidump.c  read-process.h  segfault.c  write-minicore.c  write-minicore.h  write-minidump.c  write-minidump.h
src/: Makefile  context.c  context.h  coredump-util.c  format.h  libminidump.pc.in  libminidump.sym  minidump.h  mkminidump.c  read-coredump.c  read-minidump.c  read-minidump.h  read-process.c  util.c  util.h  write-minicore.c
